--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ const { title } = Astro.props;
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
         <meta name="generator" content={Astro.generator} />
         <title>{title}</title>
     </head>
@@ -34,7 +34,7 @@ const { title } = Astro.props;
                     <li><a href="/portfolio" class="block py-2 md:py-0 px-4 md:px-0 hover:underline">Portfolio</a></li>
                     <li><a href="/reference" class="block py-2 md:py-0 px-4 md:px-0 hover:underline">Reference</a></li>
                     <li><a href="/blog" class="block py-2 md:py-0 px-4 md:px-0 hover:underline">Blog</a></li>
-                    <li><a href="/kontakt" class="block py-2 md:py-0 px-4 md:px-0 hover:underline">Kontakt</a></li>
+                    <li><a href="/kontakt" class="block py-2 md:py-0 px-4 md:px-0 hover:underline mb-4">Kontakt</a></li>
                 </ul>
             </nav>
         </header>
